# GentlyOS

./: .gitignore  BUILD.md  CLAUDE.md  FLASH.md  LICENSE.md  Makefile  README.md  build.sh  index.html  index.js  install-remote.sh  package.json
.github/workflows/: build-iso.yml
apps/electron/: main.js  package.json  preload.js
apps/electron/renderer/: index.html
apps/tauri/: package-lock.json  package.json
apps/tauri/src/: index.html
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: main.rs
boot/genesis/: git-init.sh  mint-os.sh  solana-first.sh  tree-mint.js  user-mint.js
boot/iso/: build.sh
boot/overlay/etc/apk/: world
boot/overlay/etc/local.d/: gentlyos.start
boot/overlay/root/.gentlyos/: init.js  install-stack.sh
boot/overlay/root/.gentlyos/boot/genesis/: btc-timestamp.sh
boot/overlay/root/.gentlyos/core/genesis/: ipfs-chain.js
boot/overlay/root/.gentlyos/security/audit/: btc-auditor.js
core/codie/: encoder.js  parser.js
core/primitives/: catalog.js
core/xor/: chain.js  pubkey.js
infra/edge/: worker.js
infra/solana/: audit.js
infra/solana/gentlyos-genesis/: Anchor.toml
infra/solana/gentlyos-genesis/programs/gentlyos-genesis/: Cargo.toml
infra/solana/gentlyos-genesis/programs/gentlyos-genesis/src/: lib.rs
intelligence/claude/: bridge.js
intelligence/fusion/: graph.js  pattern.js
intelligence/tiny-model/: inference.js
intelligence/watcher/: daemon.js
netboot/: answers  download.sh  start-server.sh
security/: index.js
security/chain/: index.js  verifier.py
security/defense/: responder.js
security/firewall/: Cargo.toml  bridge.js
security/firewall/cli/: Cargo.toml
security/firewall/cli/src/: main.rs
security/firewall/core/: Cargo.toml
security/firewall/core/src/: lib.rs
security/firewall/core/src/detectors/: audio.rs  cipher.rs  filesystem.rs  injection.rs  mod.rs  network.rs  obfuscation.rs  stego.rs  svg.rs  temporal.rs
security/firewall/core/src/skills/: mod.rs  registry.rs  trait.rs
security/firewall/skills/: detect_cipher.json
security/forensics/: collector.js
server/: install  server.js
storage/git/: blobs.js
