[workspace]
resolver = "2"
members = [
    "core",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["GentlyOS Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
regex = "1"
walkdir = "2"
sha2 = "0.10"
md-5 = "0.10"
md5 = "0.7"
blake3 = "1"
thiserror = "1.0"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
colored = "2"
