[package]
name = "gentlyos-tauri"
version = "0.1.0"
description = "GentlyOS Desktop App (Tauri/Rust)"
authors = ["GentlyOS"]
license = "SEE LICENSE"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "notification-all", "clipboard-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
regex = "1.10"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
