[package]
name = "firewall-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GentlyOS Firewall CLI - Security scanning tool"

[[bin]]
name = "firewall"
path = "src/main.rs"

[dependencies]
firewall-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
colored.workspace = true
