[package]
name = "firewall-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GentlyOS Firewall - ML-trainable security detection skills"

[lib]
name = "firewall_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rayon.workspace = true
regex.workspace = true
walkdir.workspace = true
sha2.workspace = true
md-5.workspace = true
md5.workspace = true
blake3.workspace = true
thiserror.workspace = true
tracing.workspace = true
